--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "echarts": "^6.0.0",
     "echarts-for-react": "^3.0.5",
-    "next": "16.0.6",
+    "next": "^16.0.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "xlsx": "^0.18.5"
